k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tex
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-loki
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
