k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hello-svc
  namespace: tex
spec:
  selector:
    app: node-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
